[package]
name = "mango-logs"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "mango_logs"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
devnet = []
default = []

[dependencies]
anchor-lang = { rev = "3115c1eee6ba455774c64144179be44f580f60f7", git = "https://github.com/jito-labs/anchor.git" }
base64 = "0.13.0"
